@@ -2,7 +2,6 @@ package gate.converter;
 
 import gate.constraint.Constraint;
 import gate.constraint.Maxlength;
-import gate.constraint.Pattern;
 import gate.error.ConversionException;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
@@ -11,14 +10,23 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.time.temporal.TemporalAccessor;
-import java.util.Arrays;
 import java.util.List;
+import java.util.regex.Pattern;
 
 public class LocalDateTimeConverter implements Converter
 {
 
-	private static final DateTimeFormatter FORMATTTER = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
-	private static final List<Constraint.Implementation<?>> CONSTRAINTS = Arrays.asList(new Maxlength.Implementation(19), new Pattern.Implementation("^[0-9]{2}/[0-9]{2}/[0-9]{4} [0-9]{2}:[0-9]{2}$"));
+	private static final Pattern PATTERN = java.util.regex.Pattern.compile("^[0-9]{2}\\/[0-9]{2}\\/[0-9]{4} [0-9]{2}:[0-9]{2}$");
+	private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
+
+	private static final Pattern SIMPLE_PATTERN = java.util.regex.Pattern.compile("^[0-9]{12}$");
+	private static final DateTimeFormatter SIMPLE_FORMATTER = DateTimeFormatter.ofPattern("ddMMyyyyHHmm");
+
+	private static final Pattern ISO_PATTERN = java.util.regex.Pattern.compile("^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}$");
+	private static final DateTimeFormatter IS0_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm");
+
+	private static final List<Constraint.Implementation<?>> CONSTRAINTS = List.of(new Maxlength.Implementation(19),
+		new gate.constraint.Pattern.Implementation("^[0-9]{12}|[0-9]{2}\\/[0-9]{2}\\/[0-9]{4} [0-9]{2}:[0-9]{2}|[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}$"));
 
 	@Override
 	public String getDescription()
@@ -41,13 +49,19 @@ public class LocalDateTimeConverter implements Converter
 	@Override
 	public String toString(Class<?> type, Object object)
 	{
-		return object != null ? FORMATTTER.format((TemporalAccessor) object) : "";
+		return object != null ? FORMATTER.format((TemporalAccessor) object) : "";
+	}
+
+	@Override
+	public String toISOString(Class<?> type, Object object)
+	{
+		return object != null ? IS0_FORMATTER.format((TemporalAccessor) object) : "";
 	}
 
 	@Override
 	public String toText(Class<?> type, Object object)
 	{
-		return object != null ? FORMATTTER.format((TemporalAccessor) object) : "";
+		return object != null ? FORMATTER.format((TemporalAccessor) object) : "";
 	}
 
 	@Override
@@ -68,7 +82,14 @@ public class LocalDateTimeConverter implements Converter
 
 		try
 		{
-			return LocalDateTime.parse(string, FORMATTTER);
+			if (PATTERN.matcher(string).matches())
+				return LocalDateTime.parse(string, FORMATTER);
+			else if (ISO_PATTERN.matcher(string).matches())
+				return LocalDateTime.parse(string, IS0_FORMATTER);
+			else if (SIMPLE_PATTERN.matcher(string).matches())
+				return LocalDateTime.parse(string, SIMPLE_FORMATTER);
+			else
+				throw new DateTimeParseException("Invalid date time format", string, 0);
 		} catch (DateTimeParseException ex)
 		{
 			throw new ConversionException(ex,
